@@ -1,12 +1,15 @@
 package com.domi.ggmassetbackend.controllers;
 
+import com.domi.ggmassetbackend.data.dto.CategoryFormDTO;
 import com.domi.ggmassetbackend.data.entity.Category;
+import com.domi.ggmassetbackend.data.vo.CategoryCountVO;
 import com.domi.ggmassetbackend.data.vo.CategoryVO;
 import com.domi.ggmassetbackend.repositories.CategoryRepository;
+import com.domi.ggmassetbackend.services.AssetService;
+import com.domi.ggmassetbackend.services.CategoryService;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -15,10 +18,48 @@ import java.util.stream.Collectors;
 @RequestMapping("/api/asset/category")
 @RestController
 public class CategoryController {
-    private final CategoryRepository categoryRepository;
+    private final CategoryService categoryService;
+    private final AssetService assetService;
+//    private final CategoryRepository categoryRepository;
 
     @GetMapping("")
     List<CategoryVO> getAllCategory() {
-        return categoryRepository.findAll().stream().map(CategoryVO::from).collect(Collectors.toList());
+        return categoryService.getAllCategory().stream().map(CategoryVO::from).collect(Collectors.toList());
+    }
+
+    @GetMapping("/admin")
+    List<CategoryCountVO> getAllCategoryAdmin() {
+        return categoryService.getAllCategory().stream().map(v -> {
+            CategoryCountVO result = new CategoryCountVO();
+            List<Integer> childrenIds = categoryService.findSubCategoryIds(v.getId());
+            result.initData(v, assetService.getCategoryCount(childrenIds));
+
+            return result;
+        }).toList();
+    }
+
+    @PutMapping("/admin")
+    int createCategory(@RequestBody CategoryFormDTO form) {
+        return categoryService.createCategory(form).getId();
+    }
+
+    @DeleteMapping("/admin")
+    @Transactional
+    void removeCategory(@RequestBody int id) {
+        assetService.setCategoryCancel(categoryService.findSubCategoryIds(id));
+        categoryService.deleteCategory(id);
+    }
+
+    @PostMapping("/rename")
+    void changeName(@RequestParam("id") int id, @RequestBody String newName) {
+        categoryService.changeCategoryName(id, newName);
+    }
+
+    @GetMapping("/random")
+    List<CategoryVO> getRandomCategory() {
+        return categoryService.getRandomCategory(3)
+                .stream()
+                .map(CategoryVO::from)
+                .collect(Collectors.toList());
     }
 }
